PaymentRequest: Throw if updateWith() is not trusted.

Should throw InvalidStateError if the event is not trsuted in updateWith().

Related spec changes:
  https://github.com/w3c/browser-payment-api/pull/545
  https://github.com/w3c/browser-payment-api/pull/546

Bug: 704162
Change-Id: I3b4391f927e9314671b715e62b49312a1127a04e
Reviewed-on: https://chromium-review.googlesource.com/572604
Commit-Queue: Jinho Bang <jinho.bang@samsung.com>
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493234}
Former-commit-id: 795e9d6ead0fab0ba44fa115ce93809863ca9524